[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
authors = ["Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition = "2021"
repository = "https://github.com/LaurenzV/krilla"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
base64 = "0.22.1"
bumpalo = "3.16.0"
comemo = "0.4.0"
difference = "2.0.0"
flate2 = {version = "1.1.0", default-features = false, features = ["zlib-rs"]}
float-cmp = "0.10.0"
fxhash = "0.2.1"
fontdb = "0.23.0"
gif = "0.13.1"
hayro-write = { git = "https://github.com/LaurenzV/hayro", rev = "d651e18" }
image = { version = "0.25.1", default-features = false }
imagesize = "0.13.0"
image-webp = "0.2.1"
krilla = { path = "crates/krilla", version = "0.4.0" }
krilla-svg = { path = "crates/krilla-svg", version = "0.1.0" }
krilla-macros = { path = "crates/krilla-macros" }
once_cell = "1.19.0"
oxipng = "9.1.2"
parley = { git = "https://github.com/linebender/parley", rev = "14070d5" }
paste = "1.0.15"
pdf-writer = "0.13.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rayon = "1.10.0"
resvg = "0.45.0"
rustybuzz = "0.20.1"
siphasher = "1.0.1"
sitro = { git = "https://github.com/LaurenzV/sitro", rev = "fb804b3" }
skrifa = "0.32.0"
smallvec = { version = "1.15.1", features = ["union", "const_new", "write"] }
subsetter = "0.2.1"
syn = { version = "2.0.76", features = ["full", "extra-traits"] }
tiny-skia = "0.11.4"
tiny-skia-path = "0.11.4"
usvg = "0.45.0"
xmp-writer = "0.3.2"
yoke = { version = "0.8.0", features = ["derive"] }
png = "0.17.16"
zune-jpeg = "0.4.13"
