[package]
name = "krilla-macros"
description = "Proc-macros for krilla."
edition = { workspace = true }
publish = false

[lib]
proc-macro = true

[features]
visreg = ["dep:sitro"]

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
sitro = { workspace = true, optional = true }
