[package]
name = "krilla-py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_krilla"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
krilla = { path = "../krilla", default-features = false }

[features]
default = ["raster-images", "simple-text"]
raster-images = ["krilla/raster-images"]
simple-text = ["krilla/simple-text"]
rayon = ["krilla/rayon"]
pdf = ["krilla/pdf"]
