[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "krilla"
version = "0.1.0"
description = "Python bindings for the krilla PDF library"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
keywords = ["pdf", "graphics", "document", "text", "fonts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Fonts",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "krilla._krilla"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "UP"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyright>=1.1.407",
]
