[package]
name = "krilla-svg"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
png = { workspace = true }
krilla = { workspace = true, features = ["raster-images"] }
usvg = { workspace = true }
tiny-skia = { workspace = true }
resvg = { workspace = true }
flate2 = { workspace = true }
fontdb = { workspace = true }

[dev-dependencies]
krilla-macros = { workspace = true }
sitro = { workspace = true }
once_cell = { workspace = true }
