[package]
name = "krilla-tests"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
krilla-svg = { workspace = true }
krilla = { workspace = true, features = ["svg", "raster-images", "simple-text"] }
krilla-macros = { workspace = true }
fontdb = { workspace = true }
usvg = { workspace = true }
skrifa = { workspace = true }
oxipng = { workspace = true }
image = { workspace = true, features = ["png"] }
sitro = { workspace = true }
difference = { workspace = true }
tiny-skia-path = { workspace = true }
once_cell = { workspace = true }