[package]
name = "krilla"
description = "A high-level crate for creating PDF files."
categories = ["graphics", "multimedia"]
keywords = ["pdf"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
exclude = ["src/tests"]


[features]
default = ["raster-images", "simple-text"]

# Enable global caching of certain objects
"comemo" = ["dep:comemo"]
# Allow for multi-threaded PDF creation.
"rayon" = ["dep:rayon"]
# Allow for rendering simple text without having to shape it yourself.
"simple-text" = ["dep:rustybuzz"]
# Allow for adding raster images to your document.
"raster-images" = ["dep:png", "dep:zune-jpeg", "dep:gif", "dep:image-webp", "dep:imagesize"]

[dependencies]
base64 = { workspace = true }
bumpalo = { workspace = true }
comemo = { workspace = true, optional = true }
flate2 = { workspace = true }
float-cmp = { workspace = true }
fxhash =  { workspace = true }
gif = { workspace = true, optional = true }
image-webp = { workspace = true, optional = true }
imagesize = { workspace = true, optional = true }
once_cell = { workspace = true }
pdf-writer = { workspace = true }
rayon = { workspace = true, optional = true }
rustybuzz = { workspace = true, optional = true }
siphasher = { workspace = true }
subsetter = { workspace = true }
skrifa = { workspace = true }
tiny-skia-path = { workspace = true }
xmp-writer = { workspace = true }
yoke = { workspace = true }
png = { workspace = true, optional = true }
zune-jpeg = { workspace = true, optional = true }

[dev-dependencies]
difference = { workspace = true }
image = { workspace = true, features = ["png"] }
oxipng = { workspace = true }
paste = { workspace = true }
sitro = { workspace = true }
fontdb = { workspace = true }
parley = { workspace = true }
