[package]
name = "cosmic_text"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
cosmic-text = { git = "https://github.com/LaurenzV/cosmic-text", rev = "39c15e56" }
krilla = { workspace = true }