[package]
name = "cosmic_text"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
cosmic-text = { git = "https://github.com/LaurenzV/cosmic-text", rev = "31a3581d" }
krilla = { workspace = true }